# chute-certo

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  predict.yml  train.yml
notebooks/: eda.ipynb
scripts/: download_data.py  evaluate_round.py  pipeline.py  predict_upcoming.py  run_training.py  serve.py  train_model.py
src/chute_certo/features/: build.py
src/chute_certo/ingestion/: api_football.py  processing.py
src/chute_certo/predictions/: store.py
src/chute_certo/serving/: api.py
src/chute_certo/training/: cv.py  train.py
tests/: conftest.py  test_cv.py  test_features.py  test_processing.py
