[project]
name = "chute-certo"
version = "0.1.0"
description = "Predição de resultados do Brasileirão Série A"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagshub>=0.7.0",
    "loguru>=0.7.0",
    "mlflow>=3.12.0",
    "pandas>=2.0.0",
    "prefect>=3.7.1",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.8.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chute_certo"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
    "seaborn>=0.13.2",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["chute_certo"]
